--- a/utils/choose_mofs.ipynb
+++ b/utils/choose_mofs.ipynb
@@ -45,10 +45,10 @@
     "    data = data[indices]\n",
     "    np.savetxt(outputfile, data, delimiter=',')\n",
     "\n",
-    "path0 = \"/home/yutao/project/InN-MOF/ZIDDIB/293K_origin.csv\"\n",
-    "path1 = \"/home/yutao/project/InN-MOF/ZIDDIB/293K_short.csv\"\n",
+    "path0 = \"/home/yutao/project/ZnN-MOF/Zn-TCPP/273K_origin.csv\"\n",
+    "path1 = \"/home/yutao/project/ZnN-MOF/Zn-TCPP/273K.csv\"\n",
     "#transfer_isotherms_unit(path0, path1, \"torr\", \"wt%\")\n",
-    "transfer_isotherms_unit(path0, path1, \"bar\", \"cm^3/g\")"
+    "transfer_isotherms_unit(path0, path1, \"torr\", \"cm^3/g\")"
    ]
   },
   {
