--- a/sampler/submit_workchains.ipynb
+++ b/sampler/submit_workchains.ipynb
@@ -7194,16 +7194,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'isotherm_unit'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m filename \u001b[38;5;241m=\u001b[39m log_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m folder \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/yutao/project/github/ff_optimizer/dataset/simulated_isotherms\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 7\u001b[0m aiida_mofs \u001b[38;5;241m=\u001b[39m \u001b[43mAiidaMofs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlog_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m write_to_csv(aiida_mofs, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(folder,filename))\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'isotherm_unit'"
+     ]
+    }
+   ],
    "source": [
-    "from aiidamof import AiidaMofs, plot_isotherm\n",
+    "from aiidamof import AiidaMofs, plot_isotherm, write_to_csv\n",
     "import numpy as np\n",
-    "log_name = \"Al_graphite_elias.log\"\n",
-    "aiida_mofs = AiidaMofs(log_name)\n",
+    "import os\n",
+    "log_name = \"Al_graphite_paper.log\"\n",
+    "filename = log_name.split(\".\")[0]+\".csv\"\n",
+    "folder = \"/home/yutao/project/github/ff_optimizer/dataset/simulated_isotherms\"\n",
+    "aiida_mofs = AiidaMofs(log_name,\"mol/kg\")\n",
     "\n",
-    "write_to_csv(aiida_mofs, \"refined_FF_elias.csv\")"
+    "write_to_csv(aiida_mofs, os.path.join(folder,filename))"
    ]
   },
   {
